# oxybox

./: .gitmodules  Cargo.toml  LICENSE  README.md  bindgen.sh  regen-bindings.sh
oxybox/: Cargo.toml  LICENSE
oxybox-sys/: Cargo.toml  build.rs
oxybox-sys/src/: bindings.rs  lib.rs  utils.rs
oxybox/src/: body.rs  body_id.rs  ids.rs  lib.rs  render.rs  shape_id.rs  utils.rs  world.rs
oxybox/tests/: falling_ball.rs
