[package]
name = "oxybox-sys"
version = "0.1.0"
edition = "2024"
description = "Low-level Rust bindings for Box2D."
license = "MIT"
repository = "https://github.com/imlazyeye/oxybox"
readme = "../README.md"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "build.rs",
    "src/**",
    "vendor/box2d/LICENSE",
    "vendor/box2d/include/**",
    "vendor/box2d/src/**",
]
links = "box2d"

[dependencies]
glam.workspace = true
static_assertions = "1.1.0"

[build-dependencies]
# note: cc had an annoying failure on macOS on 1.2.59, likely to be reverted in 1.2.60
cc = "1.2.60"
camino = "1.2.2"
