[package]
name = "oxybox"
version = "0.1.0"
edition = "2024"
description = "Rust bindings/API for Box2D."
license = "MIT"
repository = "https://github.com/imlazyeye/oxybox"
readme = "../README.md"

[dependencies]
glam.workspace = true
static_assertions = "1.1.0"
sys = { package = "oxybox-sys", version = "0.1.0", path = "../oxybox-sys" }
